--- a/styles/scss/vtex.store-components.scss
+++ b/styles/scss/vtex.store-components.scss
@@ -22,11 +22,12 @@
 }
 
 .searchBarContainer :global(.vtex-styleguide-9-x-input) {
-  padding: 8px 6px 6px 35px;
+  // padding: 8px 6px 6px 35px;
   background-color: transparent;
-  border-bottom: 1px solid #ededed !important;
-  margin-left: 30px;
+  // border-bottom: 1px solid #ededed !important;
+  // margin-left: 30px;
   text-align: left;
+  width: 100%;
 }
 
 .searchBarContainer :global(.vtex-input__prefix) {
@@ -2024,8 +2025,8 @@
   }
   @media screen and (min-width: 375px) {
     height: 80px;
-    width: 170px;
-    max-width: 170px;
+    width: 190px;
+    max-width: 190px;
     margin: 0 5px;;
   }
   @media screen and (min-width: 425px) {
@@ -2041,7 +2042,21 @@
 }
 
 :global(.vtex-store-components-3-x-infoCardTextContainer--infoCardCateg-home_item) {
-  margin-left: 1rem !important;
+  @media screen and (min-width: 320px){
+    margin-left: 0 !important;
+  }
+  @media screen and (min-width: 1024px){
+    margin-left: 1rem !important;
+  }
+  :global(.vtex-button__label) {
+    @media screen and (min-width: 320px){
+      padding-left: 10px !important;
+      text-align: left;
+    }
+    @media screen and (min-width: 1024px){
+      margin-left: 1rem !important;
+    }
+  }
 }
 
 :global(.vtex-store-components-3-x-infoCardCallActionContainer--infoCardCateg-home_item) {
