--- a/styles/scss/vtex.store-drawer.scss
+++ b/styles/scss/vtex.store-drawer.scss
@@ -10,10 +10,9 @@
     }
 
     :global(.vtex-menu-2-x-styledLinkContainer){
-        margin: 0;
-        padding: 10px 20px;
-        //border-bottom: 1px solid rgba(#333, 0.1);
-        border-bottom: 0;
+        margin: 0 20px;
+        padding: 10px 0 0 0;
+        border-bottom: 1px solid lightgray;
         &:global(.vtex-menu-2-x-styledLinkContainer--menu-btn){
             padding: 0;
 
@@ -40,6 +39,8 @@
             text-transform: uppercase;
         }
     }
+}
 
-  
+:global(.vtex-store-drawer-0-x-drawerContent) {
+    overflow-x: hidden !important ;
 }
